--- a/style.css
+++ b/style.css
@@ -9,6 +9,10 @@ nav {
   font-size: 20px;
 }
 
+.hidden {
+  display: none;
+}
+
 .container {
   margin: 4%;
 }
@@ -33,4 +37,25 @@ select {
 button {
   padding: 8px 14px;
   cursor: pointer;
+}
+
+.modal {
+  background-color: #9ea8aa;
+  padding: 34px;
+  margin: 10px;
+}
+
+.backdrop {
+  background-color: rgba(6, 6, 6, 0.4);
+  width: 100vw;
+  height: 100vh;
+  position: absolute;
+  top: 0;
+}
+
+.modal {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, 10%);
 }
